--- a/HotelBookingSystem/HotelBookingSystem/src/main/resources/application.properties
+++ b/HotelBookingSystem/HotelBookingSystem/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 #logging.level.org.springframework.web=DEBUG
 spring.jpa.show-sql=true
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
